# ResumeTailor-API

./: .dockerignore  .env.example  .gitignore  .gitmessage  AutoApplyBackendAPI.postman_collection.json  Dockerfile.resumetailor  README.md  docker-compose.yml  pyproject.toml
data/: anonymous_info.json  full_resume.yaml.empty  full_resume.yaml.example
data/test_with_job/: cover_letter.html  cover_letter.json  info.json  job_description.txt  job_profile.json  resume.html  resume.json
data/test_without_job/: info.json  resume.html  resume.json
resumetailor/: cli_app.py  main.py
resumetailor/api/: application.py  cover_letter.py  data.py  job_profile.py  resume.py
resumetailor/core/: constants.py  session.py
resumetailor/llm/: __init__.py  cover_letter.py  job_profile.py  resume.py  singletons.py
resumetailor/llm/prompts/: __init__.py  cover_letter.py  job_profile.py  resume_compile.py  resume_edit.py  resume_refine_with_job.py  resume_refine_without_job.py
resumetailor/models/: __init__.py  cover_letter.py  job_profile.py  output_resume.py  personal_info.py  resume.py
resumetailor/services/: convert_resume.py  retry.py  storage.py  utils.py
tests/: conftest.py  test_api_application.py  test_api_cover_letter.py  test_api_data.py  test_api_job_profile.py  test_api_resume.py  test_cover_letter.py  test_job_profile.py  test_resume_with_job.py  test_resume_without_job.py  test_retry_mechanism.py  utils.py
